[ddwrt] Address PR #18282 review feedback
- Fix SSH host key verification: replace AcceptAllServerKeyVerifier with
  KnownHostsServerKeyVerifier using TOFU; log SSH-style warning with
  remediation instructions when host key changes
- Fix acceptModifiedServerKey visibility (public, not protected) to match
  parent class
- Register EdDSA security provider in OSGi for Ed25519 key support
- Add bridge channels: total-clients, wireless-clients, wired-clients
- Remove unused openAuthSession parameters (privateKeyRef, pinnedFingerprint)
- Load SSH keys at client level for ProxyJump authentication
- Catch unchecked exceptions in refresh loop to prevent thread death
- Improve SshLogFollower stderr handling robustness
- Use per-instance logger names with host address for SshRunner
- Fire cache listener notifications for firewall rule changes
- Add i18n keys for all channels and thing types
- Expand README: quick start, SSH key setup, key directories, SSH config,
  host key verification (TOFU), firmware SSH setup links, full example
- Use generic hostnames in all documentation examples
- Fix markdownlint MD029 ordered list prefix style

Signed-off-by: Lee Ballard <ballle98@gmail.com>